; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_win32os.c_initialize_action.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_win32os.c_initialize_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@bInit = common dso_local global i64 0, align 8
@osVer = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@TRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @initialize_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initialize_action() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @bInit, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %13

5:                                                ; preds = %0
  store i32 4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @osVer, i32 0, i32 0), align 4
  %6 = call i64 @GetVersionEx(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @osVer, i32 0, i32 0))
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* %1, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %5
  store i32 4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @osVer, i32 0, i32 0), align 4
  %10 = call i64 @GetVersionEx(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @osVer, i32 0, i32 0))
  store i64 %10, i64* %1, align 8
  br label %11

11:                                               ; preds = %9, %5
  %12 = load i64, i64* @TRUE, align 8
  store i64 %12, i64* @bInit, align 8
  br label %13

13:                                               ; preds = %11, %4
  ret void
}

declare dso_local i64 @GetVersionEx(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
